--- a/frontend/src/app/core/components/faculty/home/home.component.html
+++ b/frontend/src/app/core/components/faculty/home/home.component.html
@@ -1,6 +1,11 @@
-<div class="faculty-home-container" [@fadeAnimation]>
+<div class="faculty-home-container">
+  @if (isLoading) {
+  <div class="loading-wrapper">
+    <app-loading></app-loading>
+  </div>
+  } @else {
   <!-- Home first row -->
-  <div class="home-row-one">
+  <div class="home-row-one" [@fadeAnimation]>
     <!-- Home greetings -->
     <div id="home_greetings">
       <h1>Hello, {{ facultyName }}</h1>
@@ -11,19 +16,23 @@
 
     <!-- Calendar -->
     <div class="faculty-calendar">
-      <full-calendar [options]="calendarOptions"></full-calendar>
+      <full-calendar
+        class="full-calendar"
+        #calendar
+        [options]="calendarOptions"
+      ></full-calendar>
     </div>
   </div>
 
   <!-- Home second row -->
-  <div class="home-row-two">
+  <div class="home-row-two" [@fadeAnimation]>
     <!-- Active Semester -->
     <div class="active-year-sem-container">
       <p class="text">
         A.Y. {{ activeYear }},
         {{ activeSemester }}
       </p>
-      <p class="label">Active Academic Year & Semester</p>
+      <p class="label">Current Academic Year & Semester</p>
     </div>
 
     <!--Announcement-->
@@ -32,4 +41,5 @@
       <span>No announcement yet.</span>
     </div>
   </div>
+  }
 </div>
