--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -141,8 +141,10 @@
         <tr *matNoDataRow>
           <td class="no-data-cell" [attr.colspan]="displayedColumns.length">
             <div class="flex-cell">
-              <span mat-symbol="info"></span>
-              <span>No faculty found.</span>
+              <div class="no-data-text">
+                <span mat-symbol="info"></span>
+                <span> No faculty found.</span>
+              </div>
             </div>
           </td>
         </tr>
