--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -126,6 +126,22 @@ body {
 
 /* Custom Styling applied globally */
 
+.no-data-text {
+  @include flex-layout($gap: var(--spacing-xs));
+  width: 100%;
+  text-align: center;
+  font-size: var(--font-size-md);
+  padding: var(--spacing-xs) 0;
+
+  span {
+    opacity: var(--opacity-semi-opaque);
+  }
+
+  span[mat-symbol] {
+    font-size: 100%;
+  }
+}
+
 .pdf-iframe {
   width: 100%;
   height: var(--dialog-base-height);
