make academic year its own route

--- a/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
+++ b/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
@@ -101,6 +101,18 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+        <!-- No Data Row -->
+        <tr *matNoDataRow>
+          <td class="no-data-cell" [attr.colspan]="displayedColumns.length">
+            <div class="flex-cell">
+              <div class="no-data-text">
+                <span mat-symbol="info"></span>
+                <span> No academic years found.</span>
+              </div>
+            </div>
+          </td>
+        </tr>
       </table>
     </div>
   </div>
