--- a/frontend/src/app/core/components/admin/main/main.component.html
+++ b/frontend/src/app/core/components/admin/main/main.component.html
@@ -35,11 +35,21 @@
         <span mat-symbol="dashboard" matListItemIcon></span>
         <span matListItemTitle>Overview</span>
       </a>
-      <!--Faculty-->
+      <!--Academic Years-->
       <a
         mat-list-item
         class="list-item"
-        routerLink="/admin/faculty"
+        routerLink="/admin/academic-years"
+        routerLinkActive="active-link"
+      >
+        <span mat-symbol="date_range" matListItemIcon></span>
+        <span matListItemTitle>Academic Years</span>
+      </a>
+      <!--Faculty Preferences-->
+      <a
+        mat-list-item
+        class="list-item"
+        routerLink="/admin/faculty-preferences"
         routerLinkActive="active-link"
       >
         <span mat-symbol="groups" matListItemIcon></span>
