--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -174,7 +174,7 @@
             <div class="flex-cell">
               <div class="no-data-text">
                 <span mat-symbol="info"></span>
-                <span> No schedules available.</span>
+                <span> No schedules found.</span>
               </div>
             </div>
           </td>
