add faculty table name

--- a/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.html
+++ b/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.html
@@ -19,6 +19,7 @@
     <app-table-generic
       [columns]="columns"
       [data]="faculty"
+      [tableName]="'faculty'"
       [displayedColumns]="displayedColumns"
       [showViewButton]="false"
       (edit)="openEditFacultyDialog($event)"
