add validation to check schedule presence before deleting a program

--- a/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
+++ b/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
@@ -108,7 +108,7 @@
             <div class="flex-cell">
               <div class="no-data-text">
                 <span mat-symbol="info"></span>
-                <span> No academic years found.</span>
+                <span> No programs found for this academic year.</span>
               </div>
             </div>
           </td>
