--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -34,6 +34,7 @@
   --font-size-3xl: 3rem;
   --font-size-3xxl: 3.5rem;
   --font-size-4xl: 4rem;
+  --font-size-5xl: 5rem;
 
   // Line heights
   --line-height-sm: 1.25;
@@ -220,6 +221,10 @@ span[mat-symbol] {
   .mdc-switch--selected .mdc-switch__icon {
     fill: white !important;
   }
+}
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  @include default-transition;
 }
 
 .mdc-checkbox__checkmark {
