--- a/frontend/src/app/core/components/admin/overview/overview.component.scss
+++ b/frontend/src/app/core/components/admin/overview/overview.component.scss
@@ -167,7 +167,9 @@
               .circular-progress {
                 width: 100%;
                 height: 100%;
-                transform: rotate(-90deg);
+                transform: rotate(
+                  -90deg
+                ); // Rotates the entire progress circle to start from top
 
                 circle {
                   fill: none;
@@ -186,11 +188,11 @@
                 }
 
                 .progress-text {
-                  fill: var(--text-primary);
-                  font-size: 20px;
+                  fill: var(--neutral-base);
+                  font-size: var(--font-size-lg);
                   font-weight: 500;
                   text-anchor: middle;
-                  transform: rotate(90deg);
+                  dominant-baseline: middle;
                 }
               }
             }
