improve change detection for faculty preferences management

--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -128,7 +128,7 @@
             <mat-slide-toggle
               [(ngModel)]="element.is_enabled"
               matTooltip="Toggle preferences submission for this faculty only"
-              (change)="onToggleChange(element)"
+              (change)="onToggleSingleChange(element)"
             >
             </mat-slide-toggle>
           </td>
