--- a/frontend/src/app/core/components/admin/overview/overview.component.html
+++ b/frontend/src/app/core/components/admin/overview/overview.component.html
@@ -92,6 +92,7 @@
               <div class="progress-container">
                 <svg class="circular-progress" viewBox="0 0 100 100">
                   <circle class="progress-bg" cx="50" cy="50" r="45"></circle>
+                  @if (preferencesProgress > 0) {
                   <circle
                     class="progress-bar"
                     cx="50"
@@ -101,6 +102,7 @@
                       getCircleOffset(preferencesProgress)
                     "
                   ></circle>
+                  }
                   <g transform="rotate(90 50 50)">
                     <text x="50" y="50" class="progress-text">
                       {{ preferencesProgress }}%
@@ -116,6 +118,7 @@
               <div class="progress-container">
                 <svg class="circular-progress" viewBox="0 0 100 100">
                   <circle class="progress-bg" cx="50" cy="50" r="45"></circle>
+                  @if (schedulingProgress > 0) {
                   <circle
                     class="progress-bar"
                     cx="50"
@@ -125,6 +128,7 @@
                       getCircleOffset(schedulingProgress)
                     "
                   ></circle>
+                  }
                   <g transform="rotate(90 50 50)">
                     <text x="50" y="50" class="progress-text">
                       {{ schedulingProgress }}%
@@ -143,6 +147,7 @@
               <div class="progress-container">
                 <svg class="circular-progress" viewBox="0 0 100 100">
                   <circle class="progress-bg" cx="50" cy="50" r="45"></circle>
+                  @if (roomUtilization > 0) {
                   <circle
                     class="progress-bar"
                     cx="50"
@@ -150,6 +155,7 @@
                     r="45"
                     [style.strokeDashoffset]="getCircleOffset(roomUtilization)"
                   ></circle>
+                  }
                   <g transform="rotate(90 50 50)">
                     <text x="50" y="55" class="progress-text">
                       {{ roomUtilization }}%
@@ -164,6 +170,7 @@
               <div class="progress-container">
                 <svg class="circular-progress" viewBox="0 0 100 100">
                   <circle class="progress-bg" cx="50" cy="50" r="45"></circle>
+                  @if (publishProgress > 0) {
                   <circle
                     class="progress-bar"
                     cx="50"
@@ -171,6 +178,7 @@
                     r="45"
                     [style.strokeDashoffset]="getCircleOffset(publishProgress)"
                   ></circle>
+                  }
                   <g transform="rotate(90 50 50)">
                     <text x="50" y="55" class="progress-text">
                       {{ publishProgress }}%
