--- a/frontend/src/app/core/components/admin/overview/overview.component.html
+++ b/frontend/src/app/core/components/admin/overview/overview.component.html
@@ -5,7 +5,7 @@
   </div>
   } @else {
   <!--Overview Header-->
-  <header class="overview-header-container" [@fadeAnimation]>
+  <!-- <header class="overview-header-container" [@fadeAnimation]>
     <div class="overview-greetings">
       <h1 id="admin_name">Hello, Admin Marissa!</h1>
       <p id="description">
@@ -16,12 +16,19 @@
       <p class="text">A.Y. {{ activeYear }}, {{ activeSemester }}</p>
       <p class="label">Active Year & Semester</p>
     </div>
-  </header>
+  </header> -->
 
   <!--Overview Main-->
   <main class="overview-main-container" [@fadeAnimation]>
     <!--Cluster One-->
     <div class="main-cluster-one">
+      <!--Greetings-->
+      <div class="overview-greetings">
+        <h1 id="admin_name">Hello, Admin Marissa!</h1>
+        <p id="description">
+          Here's the key overview of the loading and scheduling this semester.
+        </p>
+      </div>
       <!--Quick Stats-->
       <div class="quick-stats">
         <!-- Content for Active Faculty -->
@@ -231,6 +238,10 @@
 
     <!--Cluster Two-->
     <div class="main-cluster-two">
+      <div class="active-year-sem-container">
+        <p class="text">A.Y. {{ activeYear }}, {{ activeSemester }}</p>
+        <p class="label">Active Year & Semester</p>
+      </div>
       <div class="notifications card">
         <h2 class="card-title">
           <span mat-symbol="notifications"></span>Notifications
