minor styling improvements

--- a/frontend/src/app/shared/table-header/table-header.component.html
+++ b/frontend/src/app/shared/table-header/table-header.component.html
@@ -50,7 +50,7 @@
   <!--Objects-->
   <div class="object-container">
     @if (showActiveYearAndSem) {
-      <div class="active-year-sem-container" (click)="onActiveYearSemClick()" matRipple>
+      <div class="active-year-sem-container pop" (click)="onActiveYearSemClick()" matRipple>
         <p class="text">A.Y. {{ activeYear }}, {{ activeSemester }}</p>
         <p class="label">Active Year & Semester</p>
       </div>
