--- a/frontend/src/app/shared/dialog-generic/dialog-generic.component.scss
+++ b/frontend/src/app/shared/dialog-generic/dialog-generic.component.scss
@@ -18,14 +18,18 @@
   margin: var(--spacing-md) 0;
 }
 
-/* Cancel action button */
-.custom-dialog-buttons .dialog-cancel {
-  color: var(--primary-text);
-}
+.custom-dialog-buttons {
+  padding-bottom: var(--spacing-lg);
 
-/* Proceed action button */
-.custom-dialog-buttons .dialog-action {
-  background-color: var(--primary-one);
-  color: white;
-  font-weight: 500;
+  /* Cancel action button */
+  &.custom-dialog-buttons .dialog-cancel {
+    color: var(--primary-text);
+  }
+
+  /* Proceed action button */
+  &.custom-dialog-buttons .dialog-action {
+    background-color: var(--primary-one);
+    color: white;
+    font-weight: 500;
+  }
 }
